Bug 197377 - Batch Image Filtering Unsharp Mask: Wrong Thresold
Summary: Batch Image Filtering Unsharp Mask: Wrong Thresold
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Bqm-Sharpen (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-21 13:49 UTC by Andrei
Modified: 2018-03-23 11:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrei 2009-06-21 13:49:24 UTC
Version:            (using KDE 4.2.4)
OS:                Linux
Installed from:    Ubuntu Packages

The Thresold for Unsharp Mask should be between 0 and 1. But it can be set only between 0 and 20, whitout floating point. Everything above 1 has no effect and 0 is the same like sharpen filtering.
Comment 1 Aurelien Gateau 2009-09-07 09:25:26 UTC
SVN commit 1020711 by gateau:

Turn unsharp "threshold" and "percent" parameters into real percentages.

BUG:197377

 M  +6 -7      filterimagesdialog.cpp  
 M  +2 -2      filteroptionsdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1020711