Turn unsharp "threshold" and "percent" parameters into real percentages.

BUG:197377

svn path=/trunk/extragear/graphics/kipi-plugins/; revision=1020711